--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div class="content">
                 <h1 class="libre-franklin">14 - 15 October 2024</h1>
                 <h2 class="libre-franklin">MISR UNIVERSITY FOR SCIENCE AND TECHNOLOGY (MUST)</h2>
+                <img src="images/ICCAIT.png" alt="ICCAIT-logo" style="width: 160px;">
             </div>
         </div>
     </header>
@@ -89,14 +90,17 @@
         <div class="right-info">
             <div class="image-section">
                 <img src="images/MUST.png" alt="MUST-logo" style="width: 100px;">
+                <img src="images/GJU.png" alt="MUST-logo" style="width: 100px;">
+                <img src="images/ZARQA.png" alt="MUST-logo" style="width: 100px;">
+                <img src="images/USEK.png" alt="MUST-logo" style="width: 100px;">
                 <img src="images/IEEE.png" alt="IEEE-logo" style="width: 100px;">
             </div>
             <p class="playfair-display-500">
-                Artificial intelligence (AI) have tremendous impact on industry sector. ICCAIT'23 is a premier forum for AI and Industry community to present state of the art of the AI research and technology in Industry. The conference will bring together scientists, researchers and practitioners around the world to exchange their ideas and findings proposed to improve Industry and solve some of the Industry problems. Renowned speakers will be invited to present their findings and insights. Researchers are encouraged to submit original, unpublished contributions to be considered. ICCAIT'23 will be held in March 14-15, 2023 at Misr University for Science and Technology (MUST) in Giza, Egypt, which is located about
+                Artificial intelligence (AI) have tremendous impact on industry sector. ICCAIT'24 is a premier forum for AI and Industry community to present state of the art of the AI research and technology in Industry. The conference will bring together scientists, researchers and practitioners around the world to exchange their ideas and findings proposed to improve Industry and solve some of the Industry problems. Renowned speakers will be invited to present their findings and insights. Researchers are encouraged to submit original, unpublished contributions to be considered. ICCAIT'24 will be held in October 14-15, 2024 at Misr University for Science and Technology (MUST) in Giza, Egypt, which is located about
                 17 km from the great pyramids. The conference will be an excellent opportunity for exchanging ideas of future technologies and visiting great historical places in Egypt.
             </p>
             <h3>Topics</h3>
-            <p>Original manuscripts in the following, or related, topics will be considered for publications in ICCAIT'23:</p>
+            <p>Original manuscripts in the following, or related, topics will be considered for publications in ICCAIT'24:</p>
             <div class="topics-section">
                 <div class="first-col">
                     <h4>Track 1: Computing</h4>
@@ -113,6 +117,7 @@
                     </ul>
                 </div>
                 <div class="second-col">
+                    <h4>Track 2: Intelligent Systems</h4>
                     <ul>
                         <li>Bioinformatics</li>
                         <li>Decision Support Systems</li>
@@ -121,22 +126,17 @@
                         <li>Software Engineering</li>
                         <li>Geographic Information Systems</li>
                         <li>Telecommunications</li>
-                    </ul>
-                    <h4>Track 2: Intelligent Systems</h4>
-                    <ul>
                         <li>Intelligent Health Systems</li>
                         <li>Digital Transformation</li>
                     </ul>
                 </div>
                 <div class="third-col">
+                    <h4>Track 3: Technology & Applications</h4>
                     <ul>
                         <li>Human Computer Interaction</li>
                         <li>Reliability & Fault- Tolerance Systems</li>
                         <li>Simulation Systems</li>
                         <li>Virtual Reality Systems </li>
-                    </ul>
-                    <h4>Track 3: Technology & Applications</h4>
-                    <ul>
                         <li>Medical Database Systems</li>
                         <li>Multimodality Sensing</li>
                         <li>Medical Imaging Modalities AI in HealthCare</li>
@@ -147,7 +147,7 @@
                 </div>
             </div>
             <h3>Location & Activities</h3>
-            <p>ICCAIT'23 will be held at Misr University for Science and Technology (MUST) located in the 6th of October city, which is about 38 km west of Cairo, and 17 km from the great pyramids of Giza. A trip will be organized for interested to visit the great pyramids and other historical places.</p>
+            <p>ICCAIT'24 will be held at Misr University for Science and Technology (MUST) located in the 6th of October city, which is about 38 km west of Cairo, and 17 km from the great pyramids of Giza. A trip will be organized for interested to visit the great pyramids and other historical places.</p>
             <h3>Paper Submission</h3>
             <p>Authors are invited to submit original papers in Latex/Word format in the IEEE style. Templates can be downloaded from the IEEE website at this link: <a href="https://www.ieee.org/conferences/publishing/templates.html" target="_blank">https://www.ieee.org/conferences/publishing/templates.html</a> Manuscripts should be submitted electronically in the right format via the EasyChair conference account that can be accessed from the conference webpage.</p>
             <h3>Evaluation and Publication Process</h3>
