--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <h3>Paper Submission</h3>
             <p>Authors are invited to submit original papers in Latex/Word format in the IEEE style. Templates can be downloaded from the IEEE website at this link: <a href="https://www.ieee.org/conferences/publishing/templates.html" target="_blank">https://www.ieee.org/conferences/publishing/templates.html</a> Manuscripts should be submitted electronically in the right format via the EasyChair conference account that can be accessed from the conference webpage.</p>
             <h3>Evaluation and Publication Process</h3>
-            <p>Submitted manuscript will be evaluated blindly by two peer reviewers. Technical merits, novelty of the method, soundness of results, and clarity of presentation are important factors of the evaluation process. Accepted papers for authors who complete registration will be published in the conference proceedings that will be submitted for inclusion to IEEE Xplore. Authors of the best selected papers presented at the conference will be invited to prepare an extended version of their papers to be considered for publication in a special issue of the International Journal of Integrated Intelligent Systems (IJIIS).</p>
+            <p>Submitted manuscript will be evaluated blindly by two peer reviewers. Technical merits, novelty of the method, soundness of results, and clarity of presentation are important factors of the evaluation process. Accepted papers for authors who complete registration will be published in the conference proceedings that will be submitted for inclusion to IEEE Xplore. </p>
             <div class="table">
                 <div class="table-content">
                     <h2 class="table-header">Registration fees</h2>
