--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     <div class="bottom-content">
         <div class="content">
-            <h1>CALL FOR PAPERS</h1>
+            
         </div>
     </div>
     <div class="main">
@@ -85,6 +85,10 @@
 
                 <h3>Contact us:</h3>
                 <p>iccait@must.edu.eg</p>
+                <div class="papers">
+                    <p class="playfair-display-500">CALL FOR PAPERS</p>
+                    <p class="playfair-display-500"><a href="poster/Call-for-paper.pdf" target="_blank">Click Here</a></p>
+                </div>
             </div>
         </div>
         <div class="right-info">
