--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <h3>Contact us:</h3>
                 <p>iccait@must.edu.eg</p>
                 <div class="papers">
-                    <p class="playfair-display-500">CALL FOR PAPERS</p>
+                    <p class="playfair-display-500" style="font-size: xx-large;">CALL FOR PAPERS</p>
                     <p class="playfair-display-500"><a href="poster/Call-for-paper.pdf" target="_blank">Click Here</a></p>
                 </div>
             </div>
