--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <img src="images/GJU.png" alt="MUST-logo" style="width: 100px;">
                 <img src="images/ZARQA.png" alt="MUST-logo" style="width: 100px;">
                 <img src="images/USEK.png" alt="MUST-logo" style="width: 100px;">
-                <img src="images/IEEE.png" alt="IEEE-logo" style="width: 100px;">
+                <img src="images/IEEE.jpg" alt="IEEE-logo" style="width: 100px;">
             </div>
             <p class="playfair-display-500">
                 Artificial intelligence (AI) have tremendous impact on industry sector. ICCAIT'24 is a premier forum for AI and Industry community to present state of the art of the AI research and technology in Industry. The conference will bring together scientists, researchers and practitioners around the world to exchange their ideas and findings proposed to improve Industry and solve some of the Industry problems. Renowned speakers will be invited to present their findings and insights. Researchers are encouraged to submit original, unpublished contributions to be considered. ICCAIT'24 will be held in October 14-15, 2024 at Misr University for Science and Technology (MUST) in Giza, Egypt, which is located about
