--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <p>Prof. Dr. Nihad EL mahboub, President, MUST.</p>
 
                 <h3>Conference Chair:</h3>
-                <p>Prof. Dr. Eman El-Tokhy, Dean, CIT, MUST.</p>
+                <p>Prof. Dr. Eman Karam Elsayed, Dean, CIT, MUST.</p>
 
                 <h3>Conference Co-chair:</h3>
                 <p>Assoc. Prof. Mohanad Ali Deif Allah, Vice Dean for Postgraduate Studies and Scientific Research, , College of Information Technology </p>
