--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
                 <p>iccait@must.edu.eg</p>
                 <div class="papers">
                     <p class="playfair-display-500" style="font-size: xx-large;">CALL FOR PAPERS</p>
-                    <p class="playfair-display-500"><a href="poster/Call-for-paper.pdf" target="_blank">Click Here</a></p>
+                    <p class="playfair-display-500"><a href="" target="_blank">Click Here</a></p>
                 </div>
             </div>
         </div>
         <div class="right-info">
             <div class="image-section">
                 <img src="images/MUST.png" alt="MUST-logo" style="width: 100px;">
-                <img src="images/GJU.png" alt="MUST-logo" style="width: 100px;">
+                <!--<img src="images/GJU.png" alt="MUST-logo" style="width: 100px;">-->
                 <img src="images/ZARQA.png" alt="MUST-logo" style="width: 100px;">
                 <img src="images/USEK.png" alt="MUST-logo" style="width: 100px;">
                 <img src="images/IEEE.jpg" alt="IEEE-logo" style="width: 100px;">
